<?xml version="1.0" encoding="utf-8"?>
    <menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.example.mamamsehat.beranda">
        <item
            android:id="@+id/action_beranda"
            android:orderInCategory="100"
            android:title="@string/action_beranda"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_produk"
            android:orderInCategory="100"
            android:title="@string/action_produk"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_artikel"
            android:orderInCategory="100"
            android:title="@string/action_artikel"
            app:showAsAction="never" />

    <item
            android:id="@+id/action_forum"
            android:orderInCategory="100"
            android:title="@string/action_forum"
            app:showAsAction="never" />


        <item
            android:id="@+id/action_contact"
            android:orderInCategory="100"
            android:title="@string/action_contact"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_logout"
            android:orderInCategory="100"
            android:title="@string/action_logout"
            app:showAsAction="never" />
        </menu>